# dggrid_pybinds

./: CMakeLists.txt  Dockerfile  README.MD  main.cpp  setup.py
Examples/: Prototype_Bin.py  TestPayload_MixedSHP.hex  TestPayload_Sequence.hex  TestPayload_ShapeFile.hex  TestPayload_binpres.hex  TestPayload_binpresV8.hex  TestPayload_binvals.hex  TestPayload_binvalsV8.hex  TestPayload_gdalCollection.hex  TestPayload_gdalExample.hex  TestPayload_genPtsV8.hex  TestPayload_holes.hex  TestPayload_superfundGrid.hex  TestPayload_transform.hex  TestPayload_z3CellClip.hex  TestPayload_z3Nums.hex  TestPayload_z7Transform.hex  UnitTest_Generate_MixedSHP.py  UnitTest_Generate_aigenerate.py  UnitTest_Generate_determineRes.py  UnitTest_Generate_gdalCollection.py  UnitTest_Generate_gdalExample.py  UnitTest_Generate_genPtsV8.py  UnitTest_Generate_gridgenCellClip.py  UnitTest_Generate_gridgenDiamond.py  UnitTest_Generate_gridgenGeoJSON.py  UnitTest_Generate_gridgenMixedSHP.py  UnitTest_Generate_gridgenPureKML.py  UnitTest_Generate_hiRes.py  UnitTest_Generate_holes.py  UnitTest_Generate_icosahedron.py  UnitTest_Generate_igeo7WholeEarth.py  UnitTest_Generate_isea4d.py  UnitTest_Generate_isea4t.py  UnitTest_Generate_isea7hGen.py  UnitTest_Generate_mixedAperature.py  UnitTest_Generate_multipleOrientations.py  UnitTest_Generate_planetRiskClipHiRes.py  UnitTest_Generate_planetRiskClipMulti.py  UnitTest_Generate_planetRiskGridGen.py  (+35 more)
pybind11/tests/: test_smart_ptr.py
pydggrid/: Interfaces.py  Types.py
pydggrid.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pydggrid/Input/: _ArrayList.py  _Auto.py  _Cells.py  _GDAL.py  _GeoJSON.py  _Location.py  _PointBinary.py  _PointList.py  __init__.py
pydggrid/Input/Depreciate/: _Auto.py  _Cells.py  _Coordinates.py  _Location.py  _Sequence.py
pydggrid/Modules/: _Clip.py  _Input.py  _Template.py
pydggrid/Objects/: _Collection.py
pydggrid/Output/: _Geometry.py  _Records.py  _Template.py  __init__.py
pydggrid/Queries/: _Custom.py  _Generate.py  _PointGen.py  _PointPresence.py  _PointValue.py  _Statistics.py  _Template.py  _Transform.py
pydggrid/System/: _Constants.py  _Library.py  __init__.py
src/: library.cpp  library.h
src/include/: Bytes.h  Constants.h  Functions.h  Includes.h  Parameters.h  Query.h
src/pydgaplib/: CMakeLists.txt
src/pydgaplib/include/dgaplib/: DgApOperation.h  DgApOperationPList.h  DgApParamList.h  DgApSubOperation.h
src/pydgaplib/lib/: DgApSubOperation.cpp
src/pydggrid/: DgHexSF.cpp  OpBasic.cpp  OpBasic.h  SubOpBasicMulti.cpp  SubOpBinPts.cpp  SubOpDGG.cpp  SubOpGen.h  SubOpGenHelper.cpp  SubOpIn.cpp  SubOpOut.cpp  SubOpOut.h  SubOpStats.cpp  SubOpStats.h  SubOpTransform.cpp
src/pydglib/: CMakeLists.txt
src/pydglib/lib/: DgAddressBase.cpp  DgAddressType.cpp  DgApSeq.cpp  DgBase.cpp  DgBoundedHexC2RF2D.cpp  DgBoundedHexC3C2RF2D.cpp  DgBoundedHexC3RF2D.cpp  DgBoundedIDGG.cpp  DgBoundedIDGGS.cpp  DgBoundedRF2D.cpp  DgBoundedRFBase0.cpp  DgBoundedRFS2D.cpp  DgCell.cpp  (+86 more)
(+114 files in other folders)
